fixed overflow

--- a/src/components/navigations/MenuBar.css
+++ b/src/components/navigations/MenuBar.css
@@ -18,7 +18,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    /* overflow: hidden; */
+    overflow: hidden;
     background: rgb(73, 112, 184);
 }
   
